1) added wikipedia info box "card" parsing. Need to handle cases like disambiguation page, card not found, etc 2) turned off geo for news searches. Need to think about if we need to turn it back on 3) bing results not showing up, different JSON response after turning off geo, will fix next

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -343,7 +343,23 @@ input[type=submit]:active {
 
 #definition {
   width: 300px;
-  background-color: #eee;
+  height: 600px;
+  /*background-color: #eee;*/
+}
+
+.infobox {
+    position:relative;
+    left:40px;
+    border: 1px solid #aaa;
+    background-color: #f9f9f9;
+    color: black;
+    /*margin: 0.5em 0 0.5em 1em;*/
+    padding: 0.2em;
+    float: right;
+    clear: right;
+    text-align: left;
+    font-size: 88%;
+    line-height: 1.5em;
 }
 
 .left, .right {
